--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "gatsby": "^2.9.0",
     "gatsby-image": "^2.1.3",
     "gatsby-plugin-google-analytics": "^2.0.21",
+    "gatsby-plugin-gtag": "^1.0.11",
     "gatsby-plugin-manifest": "^2.1.1",
     "gatsby-plugin-offline": "^2.1.1",
     "gatsby-plugin-react-helmet": "^3.0.12",
